handling some spacing issues with combo header & page element & details page

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,11 +9,11 @@
     padding-left: 1rem; 
     padding-right:1rem; 
     padding-top: 1.5rem; 
-    padding-bottom: 12rem; 
+    // padding-bottom: 12rem; 
     flex-direction: column;
     height:12rem; 
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: flex-start;
+    align-items: center;
 
     @include tablet {
         padding-left: 2rem; 
@@ -29,6 +29,13 @@
         padding-right:3.95rem; 
         padding-top: 2rem; 
         padding-bottom: 2rem;
+    }
+
+    &__logo--styling{
+     padding-bottom: 1rem;
+        @include tablet{
+            padding-bottom: 0;
+        }
     }
 
     &__text{
